[package]
name = "fluid_engine"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[dependencies]
winit = "0.30.12"
log = "0.4.27"
simple_logger = "5.0.0"
vulkano = "0.35.2"
glam = "0.30.9"
rayon = "1.11.0"
gpu-allocator = "0.28.0"
image = "0.25.9"
thiserror = "2.0.17"
anyhow = "1.0.100"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
